@@ -2743,8 +2743,8 @@ is derived from
 .B mkisofs
 from the
 .B cdrtools 2.01.01a08
-package from May 2006,
-.IR http://cdrecord.berlios.de/ ,
+package from May 2006 (with few updates extracted from cdrtools 2.01.01a24 from
+March 2007) from .IR http://cdrecord.berlios.de/ ,
 but is now part of the
 .B cdrkit
 suite, maintained by Joerg Jaspert, Eduard Bloch, Steve McIntyre, Peter
@@ -2775,6 +2775,7 @@ Copyright 1993-1998 by Yggdrasil Computing, Inc.
 Copyright 1996-1997 by Robert Leslie
 Copyright 1997-2001 by James Pearson
 Copyright 1999-2006 by J\(:org Schilling
+Copyright 2007 by J\(:org Schilling (originating few updates)
 Copyright 2002-2003 by Jungshik Shin
 Copyright 2003 by Jaakko Heinonen
 Copyright 2006 by the Cdrkit maintainers
